k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crud-veiculos
  labels:
    name: crud-veiculos
