k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-veiculos-service
  namespace: crud-veiculos
  labels:
    app: crud-veiculos
spec:
  type: ClusterIP
  selector:
    app: crud-veiculos
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
  sessionAffinity: None
